admission/ValidatingAdmissionPolicy/policies/selinux-user/ephemeralcontainers/deny.yaml
apiVersion: v1
kind: Pod
metadata:
  name: selinux-user-ephemeralcontainers
spec:
  containers:
  - name: main
    image: busybox:1.36
    command:
    - sh
    - -c
    - sleep 3600
---
# Command: kubectl debug -n policy-test selinux-user-ephemeralcontainers -it --image=busybox:1.36 --custom=policies/selinux-user/ephemeralcontainers/deny-kubectl-debug-custom.yaml
